commit for day 43

--- a/Css-Animation/keyframe.html
+++ b/Css-Animation/keyframe.html
@@ -71,7 +71,15 @@
         It only taks the time in s or ms
       3--animation-timing-function, 
         It tells how the css should move within its its duration
-
+        This could have
+            animation-timing-function: ease;
+            animation-timing-function: ease-in;
+            animation-timing-function: ease-out;
+            animation-timing-function: ease-in-out;
+            animation-timing-function: linear;
+            animation-timing-function: step-start;
+            animation-timing-function: step-end;
+            animation-timing-function: step();
       4--animation-iteration-count,
         Tis is the number of time you want the animation to take place. It could be decimal, whole number or infinite keyword
       5--animation-direction, 
@@ -83,9 +91,15 @@
         --animation-direction: alternate;
           It plays in the specified direction, then immediately followed by the opposite direction.
         --animation-direction: alternate-reverse;
-          It plays first to opposite the specified direction, followed by the specified direction
+          It plays first to opposite the specified direction, followed by the specified directionis is specified in s or ms
       6--animation-delay, 
+        Th
       7--and animation-fill-mode
+        This tell the css which stylr=e to apply at thebegining and the end of the anmation. It could eb either: 
+          animation-fill-mode: none;
+          animation-fill-mode: forwards;
+          animation-fill-mode: backwards;
+          animation-fill-mode: both;
    -->
 
    <h2></h2>
