removed the main  styling

--- a/Css-Animation/Walking-leg.html
+++ b/Css-Animation/Walking-leg.html
@@ -7,76 +7,63 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-    section > div{
-      height: 500px;
-      width: 500px;
-      background-color: burlywood;
-    }
     .main .right {
       height: 300px;
       width: 50px;
-      background-color: rgb(1, 49, 49);
       transform: rotateZ(-35deg);
-      margin: 0 300px;
       position: absolute;
       transform-origin: 5px 5px;
-      animation: backward 2s ease 2s forwards 
-    }
-    .main .container {
-      /* transform: rotateZ(180deg); */
+      animation: backward 2s ease 1s forwards 
     }
     .main .cloth {
       height: 100px;
       width: 25px;
+      border-radius: 0 0 20px 0;
       background-color: rgb(172, 168, 43);
     }
     .main .leg {
       height: 150px;
       width: 15px;
-      background-color: rgb(247, 143, 73);
+      background-color: brown;
     }
     .main .foot {
       height:20px;
       width: 30px;
-      background-color: crimson;
+      background-color: black;
       border-radius: 0 0 20px 2px;
-    }
-    .left .right {
-
     }
     /* ================= */
      .main .left {
       height: 300px;
       width: 50px;
-      /* margin: -270px 220px; */
-      background-color: rgb(180, 187, 187);
       transform: rotateZ(33deg);
-      position: absolute;;
+      position: absolute;
       transform-origin: 5px 5px;
       animation: forward 2s ease forwards 
     }
-    .main .container2 {
-      /* transform: rotateZ(180deg); */
+    .right, .left{
+      margin: 50px 200px;    
     }
     .main .cloth2 {
       height: 100px;
       width: 25px;
+      border-radius: 0 0 20px 0;
       background-color: rgb(172, 168, 43);
     }
     .main .leg2 {
       height: 150px;
       width: 15px;
-      background-color: rgb(247, 143, 73);
+      background-color: brown;
     }
     .main .foot2 {
       height:20px;
       width: 30px;
-      background-color: crimson;
+      background-color: black;
       border-radius: 0 0 20px 2px;
     }
     .main .body {
       height: 35px;
-      width: 35px;background-color: black;
+      width: 35px;background-color: brown;
       border-radius: 50px;
     }
     /* ============== */
