restructured my css

--- a/Css-Animation/Walking-leg.html
+++ b/Css-Animation/Walking-leg.html
@@ -32,7 +32,13 @@
       background-color: black;
       border-radius: 0 0 20px 2px;
     }
+
     /* ================= */
+    .right, .left{
+      margin: 50px 200px;    
+    }
+    
+    /* =================== */
      .main .left {
       height: 300px;
       width: 50px;
@@ -40,9 +46,6 @@
       position: absolute;
       transform-origin: 5px 5px;
       animation: forward 2s ease forwards 
-    }
-    .right, .left{
-      margin: 50px 200px;    
     }
     .main .cloth2 {
       height: 100px;
@@ -111,7 +114,44 @@
           <div class="foot2"></div>
         </div>
       </div>
+
+
+      <div class="right">
+        <div class="container">
+          <div class="body"></div>
+          <div class="cloth"></div>
+          <div class="leg"></div>
+          <div class="foot"></div>
+        </div>
+      </div>
+      <div class="left">
+        <div class="container2">
+            <div class="body"></div>
+          <div class="cloth2"></div>
+          <div class="leg2"></div>
+          <div class="foot2"></div>
+        </div>
+      </div>
     </div>
+
+    
+    <div class="right">
+      <div class="container">
+        <div class="body"></div>
+        <div class="cloth"></div>
+        <div class="leg"></div>
+        <div class="foot"></div>
+      </div>
+    </div>
+    <div class="left">
+      <div class="container2">
+          <div class="body"></div>
+        <div class="cloth2"></div>
+        <div class="leg2"></div>
+        <div class="foot2"></div>
+      </div>
+    </div>
+  </div>
   </section>
 </body>
 </html>
