ad three more legs

--- a/Css-Animation/Walking-leg.html
+++ b/Css-Animation/Walking-leg.html
@@ -34,10 +34,16 @@
     }
 
     /* ================= */
-    .right, .left{
+    .person1{
       margin: 50px 200px;    
     }
-    
+    .person2{
+      margin: 50px 600px;    
+    }
+    .person3{
+      margin: 50px 1000px;    
+    }
+
     /* =================== */
      .main .left {
       height: 300px;
@@ -97,61 +103,70 @@
 <body>
   
   <section>
-    <div class="main">
-      <div class="right">
-        <div class="container">
-          <div class="body"></div>
-          <div class="cloth"></div>
-          <div class="leg"></div>
-          <div class="foot"></div>
-        </div>
-      </div>
-      <div class="left">
-        <div class="container2">
+
+    <div class="person1">
+      <div class="main">
+        <div class="right">
+          <div class="container">
             <div class="body"></div>
-          <div class="cloth2"></div>
-          <div class="leg2"></div>
-          <div class="foot2"></div>
+            <div class="cloth"></div>
+            <div class="leg"></div>
+            <div class="foot"></div>
+          </div>
+        </div>
+        <div class="left">
+          <div class="container2">
+              <div class="body"></div>
+            <div class="cloth2"></div>
+            <div class="leg2"></div>
+            <div class="foot2"></div>
+          </div>
         </div>
       </div>
+    </div>
 
-
-      <div class="right">
-        <div class="container">
-          <div class="body"></div>
-          <div class="cloth"></div>
-          <div class="leg"></div>
-          <div class="foot"></div>
-        </div>
-      </div>
-      <div class="left">
-        <div class="container2">
+    <div class="person2">
+      <div class="main">
+        <div class="right">
+          <div class="container">
             <div class="body"></div>
-          <div class="cloth2"></div>
-          <div class="leg2"></div>
-          <div class="foot2"></div>
+            <div class="cloth"></div>
+            <div class="leg"></div>
+            <div class="foot"></div>
+          </div>
+        </div>
+        <div class="left">
+          <div class="container2">
+              <div class="body"></div>
+            <div class="cloth2"></div>
+            <div class="leg2"></div>
+            <div class="foot2"></div>
+          </div>
         </div>
       </div>
     </div>
 
-    
-    <div class="right">
-      <div class="container">
-        <div class="body"></div>
-        <div class="cloth"></div>
-        <div class="leg"></div>
-        <div class="foot"></div>
+    <div class="person3">
+      <div class="main">
+        <div class="right">
+          <div class="container">
+            <div class="body"></div>
+            <div class="cloth"></div>
+            <div class="leg"></div>
+            <div class="foot"></div>
+          </div>
+        </div>
+        <div class="left">
+          <div class="container2">
+              <div class="body"></div>
+            <div class="cloth2"></div>
+            <div class="leg2"></div>
+            <div class="foot2"></div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="left">
-      <div class="container2">
-          <div class="body"></div>
-        <div class="cloth2"></div>
-        <div class="leg2"></div>
-        <div class="foot2"></div>
-      </div>
-    </div>
-  </div>
+
   </section>
 </body>
 </html>
