--- a/Css-Animation/Walking-leg.html
+++ b/Css-Animation/Walking-leg.html
@@ -19,11 +19,13 @@
       width: 25px;
       border-radius:  10px 10px 20px 0;
       background-color: rgb(172, 168, 43);
+      animation: cloth 3s ease  infinite;
     }
     .main .leg {
       height: 150px;
       width: 15px;
       background-color: brown;
+      animation: leg 3s ease  infinite
     }
     .main .foot {
       height:20px;
@@ -115,10 +117,13 @@
     body {
       background-color: darkslategrey
     }
-    .line {
+    section {
+      animation: wholebody 3s ease  infinite;
+    }
+    /* .line {
       border: 3px solid white;
       margin-top: 200px
-    }
+    } */
 
 
     /* ================= */
@@ -145,11 +150,13 @@
       width: 25px;
       border-radius: 10px 10px  20px 0;
       background-color: rgb(172, 168, 43);
+      animation: cloth 3s 2.5s ease  infinite;
     }
     .main .leg2 {
       height: 150px;
       width: 15px;
       background-color: brown;
+      animation: leg 3s 2.5s ease  infinite;
     }
     .main .foot2 {
       height:20px;
@@ -240,12 +247,35 @@
          margin: 0px 0px;
       }
       70% {
-        transform: rotateZ(5deg);
+        transform: rotateZ(10deg);
          margin: 0px 5px;
       }
       to {
         transform: rotateZ(40deg);
          margin: -4px 30px;
+      }
+    }
+    @keyframes cloth {
+      from {
+        transform: rotateZ(0deg);
+      }
+      70% {
+        transform: rotateZ(-9deg);
+      }
+      to {
+        transform: rotateZ(2deg);
+      }
+    }
+    @keyframes leg {
+      from {
+        transform: rotateZ(0deg);
+      }
+      70% {
+        transform: rotateZ(11deg);
+        margin: -2px  -5px;
+      }
+      to {
+        transform: rotateZ(2deg);
       }
     }
   </style>
