--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -26,7 +26,7 @@
    .box10 {background-color: #7e8000}
 
    .container {
-     display: contents;
+     display: grid;
      border: 5px solid red;
      height: 100vh;
      flex-direction: row;
