--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -7,11 +7,11 @@
   <title>Document</title>
   <style>
    .box {
-     color: white;
      text-align: center;
      box-shadow: 4px 4px 0 #0000001a;
      width: 300px;
      font-size: 50px;
+     border: 3px solid red
    }
 
    .box1 {background-color: #001380}
@@ -28,8 +28,11 @@
    .container {
      display: grid;
      border: 5px solid red;
+     padding: 15px;
      height: 100vh;
      flex-direction: row;
+     margin: 10% 10%;
+     color: rgb(132, 199, 8)
    }
   </style>
 </head>
