commit for day 59

--- a/css-flex/display.html
+++ b/css-flex/display.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-   .box {
+    .box {
      text-align: center;
      box-shadow: 4px 4px 0 #0000001a;
      width: 300px;
      font-size: 50px;
-     border: 3px solid red
+     border: 3px solid rgb(0, 17, 255);
    }
 
    .box1 {background-color: #001380}
@@ -25,33 +26,44 @@
    .box9 {background-color: purple}
    .box10 {background-color: #7e8000}
 
-   .container {
-     display: grid;
-     border: 5px solid red;
-     padding: 15px;
-     height: 100vh;
-     flex-direction: row;
-     margin: 10% 10%;
-     color: rgb(132, 199, 8)
-   }
+    .container {
+      display:  inline-block;
+      border: 5px solid red;
+      padding: 15px;
+      /* height: 100vh; */
+      /* width: 50px; */
+      /* margin: 50% 10%; */
+      color: rgb(132, 199, 8);
+      background-color: darksalmon;
+    }
   </style>
 </head>
+
 <body>
-  
+
   <div class="container">
-    <div class="box box1">1</div>
-    <div class="box box2">2</div>
-    <div class="box box3">3</div>
-    <div class="box box4">4</div>
-    <div class="box box5">5</div>
-    <div class="box box6">6</div>
-    <div class="box box7">7</div>
-    <div class="box box8">8</div>
-    <div class="box box9">9</div>
-    <div class="box box10">10</div>
+    <span class="box box1">1</span>
+    <span class="box box2">2</span>
+    <span class="box box3">3</span>
+    <span class="box box4">4</span>
+    <span class="box box5">5</span>
+    <span class="box box6">6</span>
+    <span class="box box7">7</span>
+    <span class="box box8">8</span>
+    <span class="box box9">9</span>
+    <span class="box box10">10</span>
   </div>
-
-
+    <span class="box box1">1</span>
+    <span class="box box2">2</span>
+    <span class="box box3">3</span>
+    <span class="box box4">4</span>
+    <span class="box box5">5</span>
+    <span class="box box6">6</span>
+    <span class="box box7">7</span>
+    <span class="box box8">8</span>
+    <span class="box box9">9</span>
+    <span class="box box10">10</span>
 
 </body>
+
 </html>
